--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ h2.food{ background-color: #FCC}
 
 
 
-@media screen and (max-width:32em), screen and (min-width:92em){
+@media screen and (max-width:32em), screen and (min-width:98em){
     .card{
         padding: 0;
     }
@@ -107,7 +107,7 @@ h2.food{ background-color: #FCC}
         border-bottom: solid 2px #BBB;
     }
 }
-@media screen and (min-width:92em){
+@media screen and (min-width:98em){
     #content{
         padding: 0 5em;
     }
@@ -166,6 +166,8 @@ summary{
     padding: 0 1em 1em 1em;
     display: block;
 }
+
+
 #menu{
     position: fixed;
     top:0px;
@@ -180,13 +182,13 @@ html, body{
 }
 #side-menu {
     position: fixed;
-    width: 13em;
     margin: 0;
     padding: 0;
     background: #333;
     height: 100%;
     display: none;
     font-family: sans-serif;
+    z-index: 99;
 }
 /*Styling what ever the logo is. Could be img or txt*/
 #side-menu > img:first-child {
@@ -255,4 +257,39 @@ html, body{
     left: 0;
     right: 0;
     margin: 0 auto;
+}
+
+/***Side-menu style when thin***/
+#side-menu{
+    display: block;
+    width: 5em;
+    /*Temporary solution*/
+    overflow: hidden;
+}
+#container{
+    margin-left: 5em;
+}
+
+/***Side-menu style when wide***/
+@media screen and (min-width:58em) and (max-width:98em),screen and (min-width:105em){
+    #side-menu{
+        display: block;
+        width: 13em;
+    }
+    #container{
+        margin-left: 13em;
+    }
+}
+
+
+@media screen and (max-width:43em){
+    #menu{
+        display: block;
+    }
+    #side-menu{
+        display: none;
+    }
+    #container{
+        margin-left: 0;
+    }
 }
