--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,7 @@ main{
     border-radius: 5em;
     background-size: cover;
     background-position: center;
+    box-shadow: 0px 3px 5px rgba(0,0,0,0.3);
 }
 .styrelse-medlem > p {
     margin: 0;
@@ -219,6 +220,7 @@ html, body{
     height: 100%;
     z-index: 200;
     font-family: sans-serif;
+    text-align: left;
 }
 /*Styling what ever the logo is. Could be img or txt*/
 #side-menu > img:first-child {
@@ -300,7 +302,25 @@ html, body{
 #about_body > img {
     height: 30em;
 }
-#about_body > #styrelsen {
+#styrelsen {
+    width: 100%;
+    background: rgba(0,0,0,0.07)
+}
+#styrelsen > div {
     max-width: 50em;
     display: inline-block;
+}
+#styrelsen > div > h1 {
+    font-style: italic;
+    font-size: 3em;
+    margin-top: 0.5em;
+    margin-bottom: 0em;
+}
+#about_body > #container {
+    margin-left: 13em;
+}
+#about_body > #container > .header {
+    height: 25em;
+    background: rgba(179, 33, 33, 0.6);
+    margin-bottom: 13em;
 }
